Fixed filter spacing and improved colouring

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -9,7 +9,7 @@ html, body {
 
 .header{
     text-align:center;
-    
+    color: #111;
     position: relative;
     opacity: 0.85;
     background-position: center;
@@ -28,6 +28,7 @@ html, body {
     font-size:13pt;
     font-weight: 600;
     color: #eee;
+    margin-bottom: 3px;
 }
 
 .filter-buttons .filter-active{
